--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,21 @@
-```gitignore
-
-# ==================== GIT IGNORE FILE ====================
-
 # Dependencies
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
-yarn.lock
 
 # Environment variables
 .env
 .env.local
 .env.production
-.env.development
 
 # Build outputs
 dist/
 build/
-out/
 
 # Firebase
 .firebase/
 *.firebaserc
-firebase-debug.log
-firebase-debug.*.log
 
 # IDE and editor files
 .vscode/
@@ -48,10 +38,6 @@ Thumbs.db
 # Logs
 logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
 
 # Runtime data
 pids
@@ -63,9 +49,6 @@ pids
 coverage/
 *.lcov
 
-# nyc test coverage
-.nyc_output
-
 # Dependency directories
 node_modules/
 jspm_packages/
@@ -75,12 +58,6 @@ jspm_packages/
 
 # Optional eslint cache
 .eslintcache
-
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
 
 # Optional REPL history
 .node_repl_history
@@ -95,7 +72,7 @@ jspm_packages/
 .env
 .env.test
 
-# parcel-bundler cache (https://parceljs.org/)
+# parcel-bundler cache
 .cache
 .parcel-cache
 
@@ -115,18 +92,6 @@ public
 # Serverless directories
 .serverless/
 
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
-
-# Stores VSCode versions used for testing VSCode extensions
-.vscode-test
-
 # Temporary folders
 tmp/
 temp/
@@ -143,53 +108,6 @@ temp/
 # Cache files
 .cache/
 
-# Runtime data
-pids
-*.pid
-*.seed
-
-# Coverage directory used by tools like istanbul
-coverage
-
-# Grunt intermediate storage
-.grunt
-
-# Compiled binary addons
-build/Release
-
-# Users Environment Variables
-.lock-wscript
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# Local Netlify folder
-.netlify
-
-# Local Vercel folder
-.vercel
-
-# Local Surge folder
-.surge
-
-# Local Now folder
-.now
-
-# ==================== PROJECT SPECIFIC ====================
-
-# Firebase emulators
-firebase-export-*/
-firebase-import-*/
-
 # Local configuration files (should not be committed)
 config.local.js
 firebase-config.local.js
@@ -202,61 +120,6 @@ temp-uploads/
 *.sql
 *.sqlite
 
-# Documentation builds
-docs/_build/
-
-# Python (if any __pycache__ directories)
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Java (if any)
-*.class
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# C/C++ (if any)
-*.o
-*.obj
-*.exe
-*.dll
-*.so
-*.dylib
-
-# ==================== SECURITY ====================
-
-# Never commit sensitive data
-*.key
-*.pem
-*.crt
-*.cer
-*.p12
-*.pfx
-*.der
-secret*
-private*
-config.json
-
-# API keys and secrets
-*-config.js
-*credentials*
-*secret*
-*private*
-
-# ==================== DEVELOPMENT ====================
-
 # Local development overrides
 local.*
 dev.*
@@ -266,3 +129,9 @@ development.*
 *.test.js
 *.spec.js
 test-results/
+
+# API keys and secrets
+*-config.js
+*credentials*
+*secret*
+*private*
